maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:24: error: not found: value direct
	direct=getDirection();
        ^Escaper:27: error: not found: value direct
		setDirection(direct);
                             ^Escaper:33: error: type mismatch;
 found   : Unit
 required: Boolean
	if(direction(Direction.NORD)){
                    ^